# axiom

./: .gitignore  CMakeLists.txt  MANIFEST.in  axiom-0.1.0-cp312-cp312-win_amd64.whl  pyproject.toml  restructure.py  setup.py
cpp/: CMakeLists.txt
cpp/include/core/: math_utils.hpp  utils.hpp
cpp/include/gpu/: math_utils.cuh
cpp/src/core/: math_utils.cpp  utils.cpp
cpp/src/gpu/: math_utils.cu
include/axiom/: core.hpp
python/_axiom/: bindings.cpp
python/_axiom/bindings/: main.cpp  math_utils_bindings.cpp
python/axiom/: __init__.py
src/axiom/: __init__.py
src/axiom/bindings/: module.cpp
src/axiom/cpp/: CMakeLists.txt  core.cpp
tests/: test_core.py
